# indi_pylibcamera

./: CHANGELOG  CameraControl.py  LICENSE  MANIFEST.in  README.md  SnoopingManager.py  build.sh  indi_pylibcamera.ini  indi_pylibcamera.py  indidevice.py  install.sh  print_camera_information.py  setup.cfg  setup.py
CameraInfos/: Arducam_Pivariety_IMX462.txt  IMX290.txt  Raspi_HQ_IMX477_Trixie.txt  Raspi_V1_IMX477.txt  Raspi_V1_OV5647.txt
src/: indi_pylibcamera.sh  indi_pylibcamera2.sh  indi_pylibcamera3.sh  indi_pylibcamera4.sh  indi_pylibcamera5.sh
src/indi_pylibcamera/: CameraControl.py  SnoopingManager.py  __init__.py  indi_pylibcamera.ini  indi_pylibcamera.py  indi_pylibcamera.xml  indi_pylibcamera2.ini  indi_pylibcamera2.py  indi_pylibcamera2.xml  indi_pylibcamera3.ini  indi_pylibcamera3.py  indi_pylibcamera3.xml  indi_pylibcamera4.ini  indi_pylibcamera4.py  indi_pylibcamera4.xml  indi_pylibcamera5.ini  indi_pylibcamera5.py  indi_pylibcamera5.xml  indi_pylibcamera_postinstall.py  indidevice.py  make_driver_xml.py  print_camera_information.py
src/indi_pylibcamera/CameraInfos/: Raspi_GlobalShutter_IMX296.txt  Raspi_HQ_IMX477.txt  Raspi_M3_IMX708.txt
