[metadata]
name = indi_pylibcamera
version = attr: indi_pylibcamera.__version__
author = Ronald Schreiber
author_email = ronald.schreiber01@gmx.de
description = an INDI driver for Raspberry Pi cameras supported by libcamera
long_description = file: README.md, CHANGELOG, LICENSE
url = https://github.com/scriptorron/indi_pylibcamera
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    python3-picamera2
    python3-lxml
    python3-astropy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    executable-name = indi_pylibcamera.indi_pylibcamera

