[metadata]
name = indi_pylibcamera
version = attr: indi_pylibcamera.__version__
author = Ronald Schreiber
author_email = ronald.schreiber01@gmx.de
description = An INDI driver for Raspberry Pi cameras supported by libcamera
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
url = https://github.com/scriptorron/indi_pylibcamera
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
#install_requires =
#    numpy>=1.24
#    astropy>=5.2
#    picamera2>=0.3

[options.packages.find]
where=src


[options.entry_points]
console_scripts =
    indi_pylibcamera = indi_pylibcamera.indi_pylibcamera:main
    indi_pylibcamera2 = indi_pylibcamera.indi_pylibcamera2:main
    indi_pylibcamera3 = indi_pylibcamera.indi_pylibcamera3:main
    indi_pylibcamera4 = indi_pylibcamera.indi_pylibcamera4:main
    indi_pylibcamera5 = indi_pylibcamera.indi_pylibcamera5:main
    indi_pylibcamera_postinstall = indi_pylibcamera.indi_pylibcamera_postinstall:main
    indi_pylibcamera_print_camera_information = indi_pylibcamera.print_camera_information:main

